--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,13 @@
 [workspace]
 resolver = "3"
-members = ["cli/*", "crates/graph"]
+members = ["cli/*", "crates/*"]
 default-members = ["cli/omni"]
 
 [workspace.package]
 rust-version = "1.87.0"
 edition = "2024"
 version = "0.0.0-semantically-released"
+authors = ["Clarence Manuel <rencedm112@gmail.com>"]
 
 [profile.release]
 opt-level = 3            # optimize for speed but increase binary size
@@ -28,7 +29,7 @@ tracing = "^0.1.41"
 tracing-subscriber = "^0.3.19"
 thiserror = "^2.0.12"
 eyre = "^0.6.12"
-time = { version = "^0.3.37", features = [] }
+time = { version = "^0.3.39", features = [] }
 derive_more = { version = "^2.0.1", features = ["full"] }
 strum = { version = "^0.27.1", features = ["derive"] }
 tokio = { version = "^1.43.0", features = [
@@ -52,3 +53,8 @@ reqwest = { version = "^0.12.12", features = [
 ], default-features = false }
 deno_core = { version = "^0.340.0" }
 oxc = { version = "*", features = ["full"] }
+clap = { version = "^4.5.31", features = ["derive"] }
+clap_complete = { version = "^4.5.46" }
+globset = { version = "^0.4" }
+shadow-rs = { version = "^1.0.1", default-features = false }
+convert_case = { version = "^0.4.0" }
