feat: created run command

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ members = ["cli/*", "crates/*"]
 default-members = ["cli/omni"]
 
 [workspace.package]
-rust-version = "1.87.0"
+rust-version = "1.88.0"
 edition = "2024"
 version = "0.0.0-semantically-released"
 authors = ["Clarence Manuel <rencedm112@gmail.com>"]
@@ -23,16 +23,16 @@ opt-level = "s"
 
 
 [workspace.dependencies]
-serde = { version = "^1.0.218", features = ["derive", "rc", "alloc"] }
+serde = { version = "^1.0.219", features = ["derive", "rc", "alloc"] }
 serde_json = "^1.0.140"
 tracing = "^0.1.41"
 tracing-subscriber = "^0.3.19"
 thiserror = "^2.0.12"
 eyre = "^0.6.12"
-time = { version = "^0.3.39", features = [] }
+time = { version = "^0.3.41", features = [] }
 derive_more = { version = "^2.0.1", features = ["full"] }
 strum = { version = "^0.27.1", features = ["derive"] }
-tokio = { version = "^1.43.0", features = [
+tokio = { version = "^1.44.2", features = [
     "rt",
     "rt-multi-thread",
     "tracing",
@@ -45,16 +45,21 @@ tokio = { version = "^1.43.0", features = [
 ] }
 itertools = { version = "^0.14.0" }
 rayon = { version = "^1.10.0" }
-reqwest = { version = "^0.12.12", features = [
+reqwest = { version = "^0.12.15", features = [
     "charset",
     "blocking",
     "rustls-tls",
     "http2",
 ], default-features = false }
-deno_core = { version = "^0.340.0" }
+deno_core = { version = "^0.343.0" }
 oxc = { version = "*", features = ["full"] }
-clap = { version = "^4.5.31", features = ["derive"] }
-clap_complete = { version = "^4.5.46" }
+clap = { version = "^4.5.37", features = ["derive", "env"] }
+clap_complete = { version = "^4.5.47" }
 globset = { version = "^0.4" }
-shadow-rs = { version = "^1.0.1", default-features = false }
-convert_case = { version = "^0.4.0" }
+shadow-rs = { version = "^1.1.1", default-features = false }
+convert_case = { version = "^0.8.0" }
+schemars = { version = "0.8.22" }
+walkdir = { version = "2.5.0" }
+serde_yml = { version = "0.0.12" }
+ignore = { version = "0.4.23" }
+regex = { version = "1.11.1" }
