--- a/cli/omni/Cargo.toml
+++ b/cli/omni/Cargo.toml
@@ -10,12 +10,22 @@ deno_core = { workspace = true }
 oxc = { workspace = true }
 eyre = { workspace = true }
 clap = { workspace = true }
+derive_more = { workspace = true }
 clap_complete = { workspace = true }
 shadow-rs = { workspace = true }
 tokio = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
-env = { path = "../../crates/env" }
+env_loader = { path = "../../crates/env_loader" }
+serde = { workspace = true }
+serde_json = { workspace = true }
+serde_yml = { workspace = true }
+schemars = { workspace = true }
+walkdir = { workspace = true }
+globset = { workspace = true }
+ignore = { workspace = true }
+regex = { workspace = true }
+
 
 [build-dependencies]
 shadow-rs = { workspace = true, features = ["default"] }
