--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,8 +19,6 @@ debug-assertions = false
 overflow-checks = false
 
 [profile.dev]
-opt-level = "s"
-
 
 [workspace.dependencies]
 serde = { version = "^1.0.219", features = ["derive", "rc", "alloc"] }
@@ -29,6 +27,7 @@ tracing = "^0.1.41"
 tracing-subscriber = "^0.3.19"
 thiserror = "^2.0.12"
 eyre = "^0.6.12"
+color-eyre = { version = "0.6.3" }
 time = { version = "^0.3.41", features = [] }
 derive_more = { version = "^2.0.1", features = ["full"] }
 strum = { version = "^0.27.1", features = ["derive"] }
