--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ members = ["cli/*", "crates/*"]
 default-members = ["cli/omni"]
 
 [workspace.package]
-rust-version = "1.88.0"
+rust-version = "1.89.0"
 edition = "2024"
 version = "0.0.0-semantically-released"
 authors = ["Clarence Manuel <rencedm112@gmail.com>"]
@@ -27,11 +27,10 @@ tracing = "^0.1.41"
 tracing-subscriber = "^0.3.19"
 thiserror = "^2.0.12"
 eyre = "^0.6.12"
-color-eyre = { version = "0.6.3" }
 time = { version = "^0.3.41", features = [] }
 derive_more = { version = "^2.0.1", features = ["full"] }
 strum = { version = "^0.27.1", features = ["derive"] }
-tokio = { version = "^1.44.2", features = [
+tokio = { version = "^1.45.0", features = [
     "rt",
     "rt-multi-thread",
     "tracing",
@@ -50,10 +49,10 @@ reqwest = { version = "^0.12.15", features = [
     "rustls-tls",
     "http2",
 ], default-features = false }
-deno_core = { version = "^0.343.0" }
+deno_core = { version = "^0.347.0" }
 oxc = { version = "*", features = ["full"] }
-clap = { version = "^4.5.37", features = ["derive", "env"] }
-clap_complete = { version = "^4.5.47" }
+clap = { version = "^4.5.38", features = ["derive", "env"] }
+clap_complete = { version = "^4.5.50" }
 globset = { version = "^0.4" }
 shadow-rs = { version = "^1.1.1", default-features = false }
 convert_case = { version = "^0.8.0" }
@@ -62,3 +61,7 @@ walkdir = { version = "2.5.0" }
 serde_yml = { version = "0.0.12" }
 ignore = { version = "0.4.23" }
 regex = { version = "1.11.1" }
+env = { path = "./crates/env" }
+env_loader = { path = "./crates/env_loader" }
+petgraph = { version = "^0.8.1" }
+omni_core = { path = "./crates/omni_core" }
