--- a/cargo/.config.toml
+++ b/cargo/.config.toml
@@ -1,3 +1,13 @@
+[unstable]
+codegen-backend = true
+
+[profile.dev]
+codegen-backend = "cranelift"
+
+# [env]
+# ORT_STRATEGY = { value = "system" }
+# ORT_LIB_LOCATION = { value = "vendor/lib", relative = true }
+
 [target.x86_64-unknown-linux-gnu]
 rustflags = ["-C", "link-arg=-fuse-ld=mold"]
 
@@ -5,12 +15,41 @@ rustflags = ["-C", "link-arg=-fuse-ld=mold"]
 rustflags = ["-C", "link-arg=-fuse-ld=mold"]
 build-std = ["std", "core", "alloc", "proc_macro"]
 
-[unstable]
-codegen-backend = true
+[target.x86_64-pc-windows-msvc]
+rustflags = ["-C", "target-feature=+crt-static"]
 
-[profile.dev]
-codegen-backend = "cranelift"
+[target.'cfg(all(windows, debug_assertions))']
+rustflags = [
+    "-C",
+    "target-feature=+crt-static",
+    "-C",
+    # increase the stack size to prevent overflowing the
+    # stack in debug when launching sub commands
+    "link-arg=/STACK:4194304",
+]
 
-[env]
-ORT_STRATEGY = { value = "system" }
-ORT_LIB_LOCATION = { value = "vendor/lib", relative = true }
+[target.x86_64-apple-darwin]
+rustflags = [
+    "-C",
+    "link-args=-weak_framework Metal -weak_framework MetalPerformanceShaders -weak_framework QuartzCore -weak_framework CoreGraphics",
+]
+
+[target.aarch64-apple-darwin]
+rustflags = [
+    "-C",
+    "link-args=-fuse-ld=lld -weak_framework Metal -weak_framework MetalPerformanceShaders -weak_framework QuartzCore -weak_framework CoreGraphics",
+]
+
+[target.'cfg(all())']
+rustflags = [
+    "-D",
+    "clippy::all",
+    "-D",
+    "clippy::await_holding_refcell_ref",
+    "-D",
+    "clippy::missing_safety_doc",
+    "-D",
+    "clippy::undocumented_unsafe_blocks",
+    "--cfg",
+    "tokio_unstable",
+]
