--- a/crates/config_utils/Cargo.toml
+++ b/crates/config_utils/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "project_resolver"
+name = "config_utils"
 rust-version.workspace = true
 #edition.workspace = true
 edition = "2024"
@@ -7,3 +7,5 @@ version.workspace = true
 repository.workspace = true
 
 [dependencies]
+serde = { workspace = true }
+schemars = { workspace = true }
