--- a/cli/omni/Cargo.toml
+++ b/cli/omni/Cargo.toml
@@ -1,13 +1,15 @@
 [package]
 name = "omni"
 rust-version.workspace = true
-edition.workspace = true
+#edition.workspace = true
+edition = "2024"
 version.workspace = true
 authors.workspace = true
+repository.workspace = true
 
 [dependencies]
 deno_core = { workspace = true }
-oxc = { workspace = true }
+#oxc = { workspace = true }
 eyre = { workspace = true }
 clap = { workspace = true }
 derive_more = { workspace = true }
@@ -26,6 +28,8 @@ globset = { workspace = true }
 ignore = { workspace = true }
 regex = { workspace = true }
 omni_core = { workspace = true }
+config_utils = { workspace = true }
+toml = { workspace = true }
 
 
 [build-dependencies]
