--- a/crates/omni_core/Cargo.toml
+++ b/crates/omni_core/Cargo.toml
@@ -1,8 +1,10 @@
 [package]
 name = "omni_core"
 rust-version.workspace = true
-edition.workspace = true
+#edition.workspace = true
+edition = "2024"
 version.workspace = true
+repository.workspace = true
 
 [dependencies]
 serde = { workspace = true }
