--- a/crates/trace/Cargo.toml
+++ b/crates/trace/Cargo.toml
@@ -1,9 +1,14 @@
 [package]
-name = "project_resolver"
+name = "trace"
 rust-version.workspace = true
 edition.workspace = true
-# edition = "2024"
 version.workspace = true
 repository.workspace = true
 
+[features]
+default = ["enabled"]
+enabled = ["dep:tracing"]
+
+
 [dependencies]
+tracing = { workspace = true, optional = true }
