--- a/crates/env_loader/Cargo.toml
+++ b/crates/env_loader/Cargo.toml
@@ -17,4 +17,4 @@ trace = { workspace = true }
 thiserror = { workspace = true }
 env = { workspace = true }
 eyre = { workspace = true }
-system_traits = { workspace = true }
+system_traits = { workspace = true, features = ["memory-sync"] }
