--- a/Cargo.toml
+++ b/Cargo.toml
@@ -88,6 +88,7 @@ url = { version = "^2.5.4" }
 parking_lot = { version = "^0.12.4" }
 bincode = { version = "^2.0.1", features = ["serde"] }
 notify = { version = "^8.0.0" }
+dir_walker = { path = "./crates/dir_walker" }
 
 [profile.release]
 incremental = true
