--- a/Cargo.toml
+++ b/Cargo.toml
@@ -89,6 +89,7 @@ parking_lot = { version = "^0.12.4" }
 bincode = { version = "^2.0.1", features = ["serde"] }
 notify = { version = "^8.0.0" }
 dir_walker = { path = "./crates/dir_walker" }
+deno_task_shell = { version = "^0.25.1" }
 
 [profile.release]
 incremental = true
