--- a/Cargo.toml
+++ b/Cargo.toml
@@ -90,6 +90,7 @@ bincode = { version = "^2.0.1", features = ["serde"] }
 notify = { version = "^8.1.0" }
 dir_walker = { path = "./crates/dir_walker" }
 deno_task_shell = { version = "^0.25.1" }
+which = { version = "^8.0.0" }
 
 [profile.release]
 incremental = true
