--- a/crates/js_runtime/Cargo.toml
+++ b/crates/js_runtime/Cargo.toml
@@ -24,3 +24,4 @@ trace = { workspace = true }
 serde = { workspace = true }
 futures = { workspace = true }
 async-trait = { workspace = true }
+which = { workspace = true }
