--- a/crates/omni_core/Cargo.toml
+++ b/crates/omni_core/Cargo.toml
@@ -11,3 +11,5 @@ serde = { workspace = true }
 schemars = { workspace = true }
 derive_more = { workspace = true }
 petgraph = { workspace = true }
+thiserror = { workspace = true }
+eyre = { workspace = true }
