--- a/cli/omni/Cargo.toml
+++ b/cli/omni/Cargo.toml
@@ -24,6 +24,7 @@ serde_yml = { workspace = true }
 schemars = { workspace = true }
 globset = { workspace = true }
 regex = { workspace = true }
+lazy-regex = { workspace = true }
 omni_core = { workspace = true }
 config_utils = { workspace = true }
 toml = { workspace = true }
