--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ eyre = "^0.6.12"
 time = { version = "^0.3.41", features = [] }
 derive_more = { version = "^2.0.1", features = ["full"] }
 strum = { version = "^0.27.1", features = ["derive"] }
+merge = { version = "0.2.0" }
 tokio = { version = "^1.46.1", features = [
     "rt",
     "rt-multi-thread",
