--- a/Cargo.toml
+++ b/Cargo.toml
@@ -84,7 +84,7 @@ omni_core = { path = "./crates/omni_core" }
 config_utils = { path = "./crates/config_utils" }
 js_runtime = { path = "./crates/js_runtime" }
 toml = { version = "^0.9.2" }
-uuid = { version = "^1.17.0", features = ["v4", "v7"] }
+uuid = { version = "^1.17.0", features = ["v4", "v7", "serde"] }
 url = { version = "^2.5.4" }
 parking_lot = { version = "^0.12.4" }
 bincode = { version = "^2.0.1", features = ["serde"] }
@@ -94,6 +94,9 @@ deno_task_shell = { version = "^0.25.1" }
 which = { version = "^8.0.0" }
 tera = { version = "1.20.0" }
 omni_types = { path = "./crates/omni_types" }
+rmp-serde = { version = "^1.3.0" }
+rmpv = { version = "^1.3.0", features = ["with-serde"] }
+defer = { version = "^0.2.1" }
 
 [profile.release]
 incremental = true
