--- a/Cargo.toml
+++ b/Cargo.toml
@@ -97,6 +97,8 @@ omni_types = { path = "./crates/omni_types" }
 rmp-serde = { version = "^1.3.0" }
 rmpv = { version = "^1.3.0", features = ["with-serde"] }
 defer = { version = "^0.2.1" }
+mockall = { version = "^0.13.1" }
+ntest = { version = "^0.9.3" }
 
 [profile.release]
 incremental = true
