--- a/crates/bridge_rpc/Cargo.toml
+++ b/crates/bridge_rpc/Cargo.toml
@@ -26,3 +26,9 @@ futures = { workspace = true }
 async-trait = { workspace = true }
 uuid = { workspace = true }
 defer = { workspace = true }
+strum = { workspace = true }
+
+[dev-dependencies]
+mockall = { workspace = true }
+parking_lot = { workspace = true }
+ntest = { workspace = true }
