feat: ignore run dependencies and failures

--- a/cli/omni/project.omni.yaml
+++ b/cli/omni/project.omni.yaml
@@ -3,9 +3,14 @@ name: omni_cli
 
 tasks:
   list:
-    command: ls -la
+    command: exit 1
     dependencies:
       - ^test
+
+  install:
+    command: cargo install --path .
+    dependencies:
+      - list
 
 dependencies:
   - omni_core
