--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
     "name": "@omni/root",
-    "version": "0.0.0-semantically-released"
+    "version": "0.0.0-semantically-released",
+    "workspaces": [
+        "packages/*"
+    ]
 }
