--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
-    "name": "@omni/root",
-    "version": "0.0.0-semantically-released",
-    "workspaces": [
-        "packages/*"
-    ]
+	"name": "@repo/root",
+	"version": "0.0.0-semantically-released",
+	"dependencies": {
+		"@repo/biome-config": "workspace:*",
+		"@repo/tsconfig": "workspace:*",
+		"@biomejs/biome": "^2.1.2",
+		"vitest": "^3.2.4"
+	},
+	"workspaces": [
+		"packages/*"
+	]
 }
