chore: sync updates

--- a/crates/omni_core/Cargo.toml
+++ b/crates/omni_core/Cargo.toml
@@ -6,6 +6,10 @@ edition.workspace = true
 version.workspace = true
 repository.workspace = true
 
+[features]
+default = ["enable-tracing"]
+enable-tracing = ["trace/enabled", "dep:tracing"]
+
 [dependencies]
 serde = { workspace = true }
 schemars = { workspace = true }
@@ -13,3 +17,5 @@ derive_more = { workspace = true }
 petgraph = { workspace = true }
 thiserror = { workspace = true }
 eyre = { workspace = true }
+trace = { workspace = true, optional = true }
+tracing = { workspace = true, optional = true }
