--- a/cli/omni/Cargo.toml
+++ b/cli/omni/Cargo.toml
@@ -7,6 +7,10 @@ version.workspace = true
 authors.workspace = true
 repository.workspace = true
 
+[features]
+default = ["enable-tracing"]
+enable-tracing = ["trace/enabled", "dep:tracing", "dep:tracing-subscriber"]
+
 [dependencies]
 #oxc = { workspace = true }
 eyre = { workspace = true }
@@ -16,8 +20,9 @@ clap_complete = { workspace = true }
 shadow-rs = { workspace = true }
 tokio = { workspace = true }
 futures = { workspace = true }
-trace = { workspace = true, features = ["enabled"] }
-tracing-subscriber = { workspace = true }
+trace = { workspace = true, optional = true }
+tracing = { workspace = true, optional = true }
+tracing-subscriber = { workspace = true, optional = true }
 env_loader = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
@@ -40,7 +45,7 @@ tracing-log = { workspace = true }
 deno_task_shell = { workspace = true }
 petgraph = { workspace = true }
 thiserror = { workspace = true }
-
+defer = { workspace = true }
 
 [build-dependencies]
 shadow-rs = { workspace = true, features = ["default"] }
