--- a/packages/bridge-rpc/package.json
+++ b/packages/bridge-rpc/package.json
@@ -1,7 +1,12 @@
 {
     "name": "@repo/bridge-rpc",
     "version": "0.0.0-semantically-released",
+    "dependencies": {
+        "@msgpack/msgpack": "^3.1.2",
+        "zod": "^4.0.5"
+    },
     "devDependencies": {
-        "@repo/tsconfig": "workspace:*"
+        "@repo/tsconfig": "workspace:*",
+        "@repo/vite-config": "workspace:*"
     }
 }
