--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-	"name": "@repo/root",
-	"version": "0.0.0-semantically-released",
-	"dependencies": {
-		"@repo/biome-config": "workspace:*",
-		"@repo/tsconfig": "workspace:*",
-		"@biomejs/biome": "^2.1.2",
-		"vitest": "^3.2.4"
-	},
-	"workspaces": [
-		"packages/*"
-	]
+    "name": "@repo/root",
+    "version": "0.0.0-semantically-released",
+    "dependencies": {
+        "@repo/biome-config": "workspace:*",
+        "@repo/tsconfig": "workspace:*",
+        "@biomejs/biome": "^2.1.2",
+        "vite": "^7.0.5",
+        "vitest": "^3.2.4",
+        "typescript": "^5.8.3"
+    },
+    "workspaces": [
+        "packages/*"
+    ]
 }
