--- a/packages/bridge-rpc/package.json
+++ b/packages/bridge-rpc/package.json
@@ -3,10 +3,13 @@
     "version": "0.0.0-semantically-released",
     "dependencies": {
         "@msgpack/msgpack": "^3.1.2",
-        "zod": "^4.0.5"
+        "zod": "^4.0.8"
     },
     "devDependencies": {
         "@repo/tsconfig": "workspace:*",
-        "@repo/vite-config": "workspace:*"
+        "@repo/vite-config": "workspace:*",
+        "vite": "^7.0.5",
+        "vitest": "^3.2.4",
+        "typescript": "^5.8.3"
     }
 }
