--- a/packages/vite-config/tsconfig.json
+++ b/packages/vite-config/tsconfig.json
@@ -1,18 +1,8 @@
 {
 	"extends": ["@repo/tsconfig/base.json"],
-	"compilerOptions": {
-		"outDir": "./dist",
-		"module": "ESNext",
-		"moduleResolution": "bundler"
-	},
-	"exclude": [
-		"dist",
-		"node_modules",
-		"output",
-		".output",
-		".vercel",
-		".solid",
-		"public",
-		"build"
-	]
+    "compilerOptions": {
+        "moduleResolution": "bundler",
+        "noEmit": true,
+        "allowImportingTsExtensions": true
+    }
 }
