--- a/packages/bridge-rpc/package.json
+++ b/packages/bridge-rpc/package.json
@@ -10,6 +10,7 @@
         "@repo/vite-config": "workspace:*",
         "vite": "^7.0.5",
         "vitest": "^3.2.4",
-        "typescript": "^5.8.3"
+        "typescript": "^5.8.3",
+        "@types/node": "24.1.0"
     }
 }
