--- a/crates/bridge_rpc/Cargo.toml
+++ b/crates/bridge_rpc/Cargo.toml
@@ -27,6 +27,7 @@ async-trait = { workspace = true }
 uuid = { workspace = true }
 defer = { workspace = true }
 strum = { workspace = true }
+bytes = { workspace = true }
 
 [dev-dependencies]
 mockall = { workspace = true }
