--- a/crates/bridge_rpc/Cargo.toml
+++ b/crates/bridge_rpc/Cargo.toml
@@ -28,6 +28,7 @@ uuid = { workspace = true }
 defer = { workspace = true }
 strum = { workspace = true }
 bytes = { workspace = true }
+byteorder = { workspace = true }
 
 [dev-dependencies]
 mockall = { workspace = true }
