--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,8 +50,9 @@ tokio = { version = "^1.46.1", features = [
     "time",
     "macros",
     "process",
+    "io-util",
 ] }
-tokio-util = { version = "^0.7.15" }
+tokio-util = { version = "^0.7.15", features = ["compat"] }
 itertools = { version = "^0.14.0" }
 rayon = { version = "^1.10.0" }
 reqwest = { version = "^0.12.22", features = [
