--- a/packages/bridge-rpc/project.omni.yaml
+++ b/packages/bridge-rpc/project.omni.yaml
@@ -5,7 +5,10 @@ tasks:
     command: bun x vite build
 
   test:unit: bun x vitest --config ./vitest.config.unit.ts run
-  test:integration: bun x vitest --config ./vitest.config.integration.ts run
+  test:integration:
+    command: bun x vitest --config ./vitest.config.integration.ts run
+    dependencies:
+      - test:unit
   test:
     command: echo "Test completed"
     dependencies:
