--- a/packages/bridge-rpc/package.json
+++ b/packages/bridge-rpc/package.json
@@ -1,6 +1,9 @@
 {
     "name": "@repo/bridge-rpc",
     "version": "0.0.0-semantically-released",
+    "exports": {
+        ".": "./src/index.ts"
+    },
     "dependencies": {
         "@msgpack/msgpack": "^3.1.2",
         "zod": "^4.0.8"
