--- a/packages/bridge-rpc/project.omni.yaml
+++ b/packages/bridge-rpc/project.omni.yaml
@@ -1,5 +1,5 @@
 # yaml-language-server: $schema=../../artifacts/json-schemas/project.json
-name: bridge-rpc-ts
+name: "@repo/bridge-rpc"
 tasks:
   build:
     command: bun x vite build
