refactor: error types to use strum

--- a/crates/env/Cargo.toml
+++ b/crates/env/Cargo.toml
@@ -11,3 +11,4 @@ repository.workspace = true
 derive_more = { workspace = true }
 thiserror = { workspace = true }
 convert_case = { workspace = true }
+strum = { workspace = true }
