--- a/crates/env_loader/Cargo.toml
+++ b/crates/env_loader/Cargo.toml
@@ -18,3 +18,4 @@ thiserror = { workspace = true }
 env = { workspace = true }
 eyre = { workspace = true }
 system_traits = { workspace = true, features = ["memory-sync"] }
+strum = { workspace = true }
