--- a/crates/js_runtime/Cargo.toml
+++ b/crates/js_runtime/Cargo.toml
@@ -25,3 +25,4 @@ serde = { workspace = true }
 futures = { workspace = true }
 async-trait = { workspace = true }
 which = { workspace = true }
+strum = { workspace = true }
