--- a/crates/omni_core/Cargo.toml
+++ b/crates/omni_core/Cargo.toml
@@ -19,3 +19,4 @@ thiserror = { workspace = true }
 eyre = { workspace = true }
 trace = { workspace = true, optional = true }
 tracing = { workspace = true, optional = true }
+strum = { workspace = true }
