--- a/crates/config_utils/Cargo.toml
+++ b/crates/config_utils/Cargo.toml
@@ -10,9 +10,10 @@ repository.workspace = true
 default = []
 serde = ["dep:serde"]
 schemars = ["dep:schemars"]
-merge = ["dep:merge"]
 
 [dependencies]
 serde = { workspace = true, optional = true }
 schemars = { workspace = true, optional = true }
-merge = { workspace = true, optional = true }
+merge = { workspace = true }
+strum = { workspace = true }
+derive_more = { workspace = true }
