--- a/cli/omni/Cargo.toml
+++ b/cli/omni/Cargo.toml
@@ -32,7 +32,7 @@ globset = { workspace = true }
 regex = { workspace = true }
 lazy-regex = { workspace = true }
 omni_core = { workspace = true }
-config_utils = { workspace = true, features = ["serde", "schemars", "merge"] }
+config_utils = { workspace = true, features = ["serde", "schemars"] }
 merge = { workspace = true }
 toml = { workspace = true }
 js_runtime = { workspace = true }
@@ -46,6 +46,7 @@ deno_task_shell = { workspace = true }
 petgraph = { workspace = true }
 thiserror = { workspace = true }
 defer = { workspace = true }
+strum = { workspace = true }
 
 [build-dependencies]
 shadow-rs = { workspace = true, features = ["default"] }
