--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,8 @@ system_traits = { path = "./crates/system_traits" }
 async-trait = { version = "^0.1.88" }
 serde_json = { version = "^1.0.140" }
 trace = { path = "./crates/trace" }
+log = { version = "^0.4.27" }
+env_logger = { version = "^0.11.8" }
 tracing = { version = "^0.1.41" }
 tracing-log = { version = "^0.2.0" }
 tracing-subscriber = { version = "^0.3.19" }
