--- a/Cargo.toml
+++ b/Cargo.toml
@@ -104,6 +104,7 @@ mockall = { version = "^0.13.1" }
 ntest = { version = "^0.9.3" }
 bytes = { version = "^1.10.1" }
 byteorder = { version = "^1.5.0" }
+rust-embed = { version = "8.7.2" }
 
 [profile.release]
 incremental = true
