feat: add WORKSPACE_DIR and PROJECT_DIR support on extend paths

--- a/artifacts/json-schemas/project.json
+++ b/artifacts/json-schemas/project.json
@@ -1,139 +1,1 @@
-{
-  "$schema": "https://json-schema.org/draft/2020-12/schema",
-  "title": "ProjectConfiguration",
-  "type": "object",
-  "properties": {
-    "dependencies": {
-      "type": "array",
-      "default": [],
-      "items": {
-        "type": "string"
-      }
-    },
-    "env": {
-      "anyOf": [
-        {
-          "$ref": "#/$defs/ProjectEnvConfiguration"
-        },
-        {
-          "type": "null"
-        }
-      ]
-    },
-    "extends": {
-      "type": "array",
-      "default": [],
-      "items": {
-        "type": "string"
-      }
-    },
-    "implicit_dependencies": {
-      "description": "Allow detecting implicit dependencies from other project configuration files\n(e.g. package.json, Cargo.toml, etc.)",
-      "type": "boolean",
-      "default": false
-    },
-    "implicit_tasks": {
-      "description": "Allow detecting task dependencies from other project configuration files\n(e.g. package.json, Cargo.toml, etc.)",
-      "type": "boolean",
-      "default": false
-    },
-    "name": {
-      "type": "string"
-    },
-    "tasks": {
-      "type": [
-        "object",
-        "null"
-      ],
-      "additionalProperties": {
-        "$ref": "#/$defs/TaskConfiguration"
-      }
-    }
-  },
-  "required": [
-    "name"
-  ],
-  "$defs": {
-    "ListConfig": {
-      "anyOf": [
-        {
-          "type": "array",
-          "items": {
-            "type": "string"
-          }
-        },
-        {
-          "type": "object",
-          "properties": {
-            "merge": {
-              "type": "array",
-              "items": {
-                "type": "string"
-              }
-            }
-          },
-          "required": [
-            "merge"
-          ]
-        },
-        {
-          "type": "object",
-          "properties": {
-            "replace": {
-              "type": "array",
-              "items": {
-                "type": "string"
-              }
-            }
-          },
-          "required": [
-            "replace"
-          ]
-        }
-      ]
-    },
-    "ProjectEnvConfiguration": {
-      "type": "object",
-      "properties": {
-        "files": {
-          "anyOf": [
-            {
-              "$ref": "#/$defs/ListConfig"
-            },
-            {
-              "type": "null"
-            }
-          ]
-        }
-      }
-    },
-    "TaskConfiguration": {
-      "anyOf": [
-        {
-          "type": "string"
-        },
-        {
-          "type": "object",
-          "properties": {
-            "command": {
-              "type": "string"
-            },
-            "dependencies": {
-              "type": "array",
-              "default": [],
-              "items": {
-                "$ref": "#/$defs/string"
-              }
-            }
-          },
-          "required": [
-            "command"
-          ]
-        }
-      ]
-    },
-    "string": {
-      "type": "string"
-    }
-  }
-}
+{"$schema":"https://json-schema.org/draft/2020-12/schema","title":"ProjectConfiguration","type":"object","properties":{"dependencies":{"$ref":"#/$defs/ListConfig","default":[]},"env":{"anyOf":[{"$ref":"#/$defs/ProjectEnvConfiguration"},{"type":"null"}]},"extends":{"type":"array","default":[],"items":{"type":"string"}},"name":{"type":"string"},"tasks":{"anyOf":[{"$ref":"#/$defs/DictConfig"},{"type":"null"}]}},"required":["name"],"$defs":{"DictConfig":{"anyOf":[{"type":"object","additionalProperties":{"$ref":"#/$defs/TaskConfiguration"}},{"type":"object","properties":{"merge":{"type":"object","additionalProperties":{"$ref":"#/$defs/TaskConfiguration"}}},"required":["merge"]},{"type":"object","properties":{"replace":{"type":"object","additionalProperties":{"$ref":"#/$defs/TaskConfiguration"}}},"required":["replace"]}]},"ListConfig":{"anyOf":[{"type":"array","items":{"$ref":"#/$defs/string"}},{"type":"object","properties":{"merge":{"type":"array","items":{"$ref":"#/$defs/string"}}},"required":["merge"]},{"type":"object","properties":{"append":{"type":"array","items":{"$ref":"#/$defs/string"}}},"required":["append"]},{"type":"object","properties":{"prepend":{"type":"array","items":{"$ref":"#/$defs/string"}}},"required":["prepend"]},{"type":"object","properties":{"replace":{"type":"array","items":{"$ref":"#/$defs/string"}}},"required":["replace"]}]},"ProjectEnvConfiguration":{"type":"object","properties":{"files":{"anyOf":[{"$ref":"#/$defs/ListConfig"},{"type":"null"}]}}},"TaskConfiguration":{"anyOf":[{"type":"string"},{"type":"object","properties":{"command":{"type":"string"},"dependencies":{"$ref":"#/$defs/ListConfig","default":[]}},"required":["command"]}]},"string":{"type":"string"}}}
