--- a/cli/omni/Cargo.toml
+++ b/cli/omni/Cargo.toml
@@ -29,6 +29,8 @@ trace = { workspace = true, optional = true }
 tracing = { workspace = true, optional = true }
 tracing-subscriber = { workspace = true, optional = true }
 tracing-log = { workspace = true, optional = true }
+env = { workspace = true }
+omni_types = { workspace = true }
 env_loader = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
