--- a/Cargo.toml
+++ b/Cargo.toml
@@ -105,6 +105,7 @@ ntest = { version = "^0.9.3" }
 bytes = { version = "^1.10.1" }
 byteorder = { version = "^1.5.0" }
 rust-embed = { version = "8.7.2" }
+garde = { version = "^0.22.0", features = ["full"] }
 
 [profile.release]
 incremental = true
