--- a/cli/omni/Cargo.toml
+++ b/cli/omni/Cargo.toml
@@ -40,7 +40,11 @@ globset = { workspace = true }
 regex = { workspace = true }
 lazy-regex = { workspace = true }
 omni_core = { workspace = true }
-config_utils = { workspace = true, features = ["serde", "schemars"] }
+config_utils = { workspace = true, features = [
+    "serde",
+    "schemars",
+    "validator-garde",
+] }
 merge = { workspace = true }
 toml = { workspace = true }
 js_runtime = { workspace = true }
@@ -56,6 +60,7 @@ defer = { workspace = true }
 strum = { workspace = true }
 log = { workspace = true }
 env_logger = { workspace = true }
+garde = { workspace = true }
 
 [build-dependencies]
 shadow-rs = { workspace = true, features = ["default"] }
