--- a/crates/config_utils/Cargo.toml
+++ b/crates/config_utils/Cargo.toml
@@ -10,6 +10,7 @@ repository.workspace = true
 default = []
 serde = ["dep:serde"]
 schemars = ["dep:schemars"]
+validator-garde = ["dep:garde"]
 
 [dependencies]
 serde = { workspace = true, optional = true }
@@ -17,3 +18,4 @@ schemars = { workspace = true, optional = true }
 merge = { workspace = true }
 strum = { workspace = true }
 derive_more = { workspace = true }
+garde = { workspace = true, optional = true }
